--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,168 +1,12 @@
-@media (min-width: 768px){
-    .sticky {
-        position: sticky;
-    }
-}
-
-
-
-.bg-gray-800 {
-    --tw-bg-opacity: 1;
-    background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
-}
-
-.z-10 {
-    z-index: 10;
-}
-
-.top-0 {
-    top: 0px;
-}
-
-*, ::before, ::after {
-    --tw-ring-inset: var(--tw-empty,/*!*/ /*!*/);
-    --tw-ring-offset-width: 0px;
-    --tw-ring-offset-color: #fff;
-    --tw-ring-color: rgba(59, 130, 246, 0.5);
-    --tw-ring-offset-shadow: 0 0 #0000;
-    --tw-ring-shadow: 0 0 #0000;
-}
-
-*, ::before, ::after {
-    --tw-shadow: 0 0 #0000;
-}
-
-*, ::before, ::after {
-    --tw-border-opacity: 1;
-    border-color: rgba(229, 231, 235, var(--tw-border-opacity));
-}
-
-*, ::before, ::after {
-    box-sizing: border-box;
-    border-width: 0;
-    border-style: solid;
-    border-color: currentColor;
-}
-
-*, ::before, ::after {
-    box-sizing: border-box;
-}
-user agent stylesheet
-header {
-    display: block;
-}
-
-.text-gray-400 {
-    --tw-text-opacity: 1;
-    color: rgba(156, 163, 175, var(--tw-text-opacity));
-}
-
-.bg-gray-900 {
-    --tw-bg-opacity: 1;
-    background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
-}
-
-@media (min-width: 768px)
-
-.md\:flex-row {
-    flex-direction: row;
-}
-
-.p-5 {
-    padding: 1.25rem;
-}
-
-.items-center {
-    align-items: center;
-}
-
-.flex-wrap {
-    flex-wrap: wrap;
-}
-
-.flex-col {
-    flex-direction: column;
-}
-
-.flex {
+.nav-menu {
     display: flex;
 }
 
-.mx-auto {
-    margin-left: auto;
-    margin-right: auto;
-}
-@media (min-width: 768px)
-
-.container {
-    max-width: 768px;
-}
-@media (min-width: 640px)
-
-.container {
-    max-width: 640px;
+.nav-menu li {
+    padding: 0 1rem;
 }
 
-.container {
-    width: 100%;
-}
-
-*, ::before, ::after {
-    --tw-ring-inset: var(--tw-empty,/*!*/ /*!*/);
-    --tw-ring-offset-width: 0px;
-    --tw-ring-offset-color: #fff;
-    --tw-ring-color: rgba(59, 130, 246, 0.5);
-    --tw-ring-offset-shadow: 0 0 #0000;
-    --tw-ring-shadow: 0 0 #0000;
-}
-
-*, ::before, ::after {
-    --tw-shadow: 0 0 #0000;
-}
-
-*, ::before, ::after {
-    --tw-border-opacity: 1;
-    border-color: rgba(229, 231, 235, var(--tw-border-opacity));
-}
-
-*, ::before, ::after {
-    box-sizing: border-box;
-    border-width: 0;
-    border-style: solid;
-    border-color: currentColor;
-}
-
-*, ::before, ::after {
-    box-sizing: border-box;
-}
-
-div {
-    display: block;
-}
-
-.text-white {
-    --tw-text-opacity: 1;
-    color: rgba(255, 255, 255, var(--tw-text-opacity));
-}
-
-.font-medium {
+.nav-menu li a{
+    font-size: 1.2rem;
     font-weight: 500;
-}
-
-.mb-4 {
-    margin-bottom: 1rem;
-}
-
-a {
-    color: inherit;
-    text-decoration: inherit;
-}
-
-.text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-}
-
-.ml-3 {
-    margin-left: 0.75rem;
 }
