--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,14 @@
+.header-nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+    background-color: white;
+}
+
 .nav-menu {
     display: flex;
+    list-style: none;
 }
 
 .nav-menu li {
@@ -9,4 +18,18 @@
 .nav-menu li a{
     font-size: 1.2rem;
     font-weight: 500;
+}
+
+@media screen and (max-width: 1040px) {
+    .nav-menu {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100vh;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -3;
+    }
 }
