--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -20,6 +20,10 @@
     font-weight: 500;
 }
 
+.hamburger {
+    display: none;
+}
+
 @media screen and (max-width: 1040px) {
     .nav-menu {
         flex-direction: column;
@@ -28,8 +32,25 @@
         width: 100%;
         height: 100vh;
         position: absolute;
-        top: 0;
+        top: -100%;
         left: 0;
         z-index: -3;
+        transition: 0.3s;
+    }
+
+    .nav-menu.active{
+        top: 0;
+    }
+
+    .nav-menu li {
+        padding: 1rem 0;
+    }
+
+    .nav-menu a {
+        font-size: 2rem;
+    }
+
+    .hamburger {
+        display: initial;
     }
 }
