--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,9 +1,13 @@
 .header-nav {
     display: flex;
+    position: fixed;
+    width: 100%;
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
     background-color: white;
+    z-index: 9999;
+    
 }
 
 .nav-menu {
