--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -36,7 +36,7 @@
         width: 100%;
         height: 100vh;
         position: absolute;
-        top: -100%;
+        top: -1000%;
         left: 0;
         z-index: -3;
         transition: 0.3s;
@@ -44,6 +44,7 @@
 
     .nav-menu.active{
         top: 0;
+        background: white;
     }
 
     .nav-menu li {
