--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -6,22 +6,30 @@
     align-items: center;
     padding: 1rem;
     background-color: white;
+    
     z-index: 9999;
     
 }
 
+.nav-linky {
+    color: black;
+  }
+
 .nav-menu {
     display: flex;
     list-style: none;
+    
 }
 
 .nav-menu li {
     padding: 0 1rem;
+    
 }
 
 .nav-menu li a{
     font-size: 1.2rem;
     font-weight: 500;
+    color: black;
 }
 
 .hamburger {
