--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -2,7 +2,7 @@
 .home-section {
     position: relative;
     z-index: -1;
-    background-image: var(--image-gradient), url(../assets/jasonaul1.png);
+    /* background-image: var(--image-gradient), url(../assets/jasonaul1.png); */
     background-position: top center;
     background-repeat: no-repeat;
     padding-bottom: 30px !important;
@@ -42,7 +42,7 @@
   }
   .Typewriter__cursor {
     font-size: 2.4em !important;
-    color: #b562d6 !important;
+    color: #ff0000 !important;
   }
   
   @media (max-width: 767px) {
