--- a/src/routes/Projects.css
+++ b/src/routes/Projects.css
@@ -86,7 +86,7 @@
     box-shadow: none !important;
   }
   .project-heading {
-    color: white !important;
+    color: black !important;
     font-size: 2.3em !important;
     font-weight: 500 !important;
     padding-top: 10px !important;
