--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,16 @@
   padding: 10px;
 }
 
+.contact-h1 {
+  padding-top: 120px;
+  text-align: center;
+}
+
+.contact-p {
+  text-align: center;
+  padding-top: 10px;
+}
+
 
 
 .about-title {
