--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -36,23 +36,28 @@
     display: none;
 }
 
-@media screen and (max-width: 1040px) {
+@media only screen and (max-width: 1040px) {
     .nav-menu {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        height: 100vh;
-        position: absolute;
-        top: -1000%;
-        left: 0;
-        z-index: -3;
-        transition: 0.3s;
+
+        display: none;
+
     }
 
     .nav-menu.active{
-        top: 0;
-        background: white;
+        top: 100px;
+        background: #ffffff;
+        display: initial;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 25%;
+        height: 50vh;
+        position: absolute;
+        left: 75%;
+        top: 50px;
+        text-align: center;
+        z-index: -3;
+        transition: 0.3s;
     }
 
     .nav-menu li {
