--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -44,18 +44,19 @@
     }
 
     .nav-menu.active{
-        top: 100px;
+        display: block;
+        top: 70px;
         background: #ffffff;
-        display: initial;
+        
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        width: 25%;
-        height: 50vh;
-        position: absolute;
-        left: 75%;
-        top: 50px;
         text-align: center;
+        width: 100%;
+        height: 100vh;
+        position: absolute;
+
+        left: 0;
         z-index: -3;
         transition: 0.3s;
     }
