--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -11,6 +11,13 @@
     
 }
 
+.nav-name{
+    color: black;
+  text-decoration: none;
+  margin-top: -15px;
+  
+}
+
 .nav-linky {
     color: black;
   }
@@ -66,7 +73,7 @@
     }
 
     .nav-menu a {
-        font-size: 2rem;
+        font-size: 3rem;
     }
 
     .hamburger {
